pre build event copy haywire.dll

--- a/src/samples/hello_world.net/hello_world.csproj
+++ b/src/samples/hello_world.net/hello_world.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="haywire-net">
+      <HintPath>..\..\haywire.net\bin\Debug\haywire-net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,13 +47,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\haywire.net\haywire-net.csproj">
-      <Project>{74cd59bf-57d0-42f0-8e6d-aa784b984536}</Project>
-      <Name>haywire</Name>
-    </ProjectReference>
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>echo ..\..\..\..\haywire.net\bin\$(ConfigurationName)\haywire.dll
+copy ..\..\..\..\haywire.net\bin\$(ConfigurationName)\haywire.dll $(TargetDir)</PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
