Added .sln and Owin nuget package to haywire.net

--- a/src/haywire.net/haywire-net.csproj
+++ b/src/haywire.net/haywire-net.csproj
@@ -42,6 +42,7 @@
     <Compile Include="HaywireInterop.cs" />
     <Compile Include="HaywireResponse.cs" />
     <Compile Include="HaywireServer.cs" />
+    <Compile Include="HaywireWebApp.cs" />
     <Compile Include="PinnedObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
