--- a/src/samples/hello_world.net/hello_world.csproj
+++ b/src/samples/hello_world.net/hello_world.csproj
@@ -49,8 +49,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PreBuildEvent>echo ..\..\..\..\haywire.net\bin\$(ConfigurationName)\haywire.dll
-copy ..\..\..\..\haywire.net\bin\$(ConfigurationName)\haywire.dll $(TargetDir)</PreBuildEvent>
+    <PreBuildEvent>copy ..\..\..\..\haywire.net\bin\$(ConfigurationName)\haywire.dll $(TargetDir)</PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
